--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header id="header">
       <img src="logo.jpg">
-      <h1>Home Page</h1>
+      <h1>Yanjia Li's Home Page</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
@@ -44,7 +44,7 @@
         <div id="content"> 
           
           <div id="home" class="content-region hide">
-            <h2>Home</h2>
+<!--             <h2>Home</h2> -->
             <p>
               l am an Mphil student at Hong Kong Univeristy of Science and Technology(HKUST), under the supervision of Prof. Huamin Qu and Prof. Jia Liu. My research interest include Human-Computer interaction, recommendation systems, and preferences. I apply machine learning to understand human behaviour and to facilitate decision making. 
             </p>
