--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <body>
 
     <header id="header">
-      <img src="logo.HEIC">
-      <h1>Yanjia Li's Home Page</h1>
+      <img src="logo.jpg">
+      <h1>Yanjia Li</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
