--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div id="home" class="content-region hide">
 <!--             <h2>Home</h2> -->
             <p>
-              l am an Mphil student at Hong Kong Univeristy of Science and Technology(HKUST), under the supervision of Prof. Huamin Qu and Prof. Jia Liu. My research interest include Human-Computer interaction, recommendation systems, and preferences. I apply machine learning to understand human behaviour and to facilitate decision making. 
+              l am an Mphil student at Hong Kong Univeristy of Science and Technology (HKUST), under the supervision of Prof. <a href="http://huamin.org/"> Huamin Qu </a> and Prof. ,<a href="https://mark.hkust.edu.hk/faculty-and-staff/directory/jialiu"> Jia Liu</a>. My research interest include Human-Computer interaction, recommendation systems, and preferences. I apply machine learning to understand human behaviour and to facilitate decision making. 
             </p>
             <p>
               l obtained my bachelor degree of Science from HKUST in 2021, with double major in Computer Science and Engineering and Data Science and Technology. After graduaction, l worked as a research engineer in Fano Labs focusing on speech recognition.
